# RoamNERd

./: .gitignore  .python-version  README.md  main.py  requirements.txt
backend/: PrinceTest.txt  README.md  main.py  mdoutput.md  pyproject.toml  requirements.txt  roam_date_formatter.py  server.py  testtext.py
client/: package.json
client/public/: index.html
client/src/: App.scss  App.tsx  Button.tsx  DropZone.tsx  Footer.tsx  Header.tsx  IconButton.tsx  InputZone.tsx  Modal.tsx  OutputZone.tsx  Theme.ts  index.tsx
client/src/utils/: clipboard.ts  download.ts
roamnerdCLI/: pyproject.toml  roamnerd.py  test1.md  test1.txt  test2.txt  test3.txt
