[tool.poetry]
name = "roamnerd"
version = "0.1.8"
description = "A command-line tool for accessing the roamNERd API to annotate .txt files"
authors = ["hmprt <hmprt@protonmail.com>"]
license = "gpl-3.0"

[tool.poetry.dependencies]
python = "^3.0"
argh = "^0.26.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
roamnerd = 'roamnerd:main'
